--- a/guides/core-workflows/structuring-tests.mdx
+++ b/guides/core-workflows/structuring-tests.mdx
@@ -1,231 +1,197 @@
 ---
-title: "Structuring Test Cases and Test Suites"
-description: "Best practices for organizing tests in GoogleTest: how to create test cases, group tests meaningfully, and use test suite features to support maintainable, scalable projects. Includes naming conventions and real-world structuring examples."
+title: "Structuring Effective Test Suites"
+description: "Best practices for organizing your test code: grouping related tests, setting up shared fixtures, parameterizing tests, and balancing thoroughness with maintainability in large codebases."
 ---
 
-# Structuring Test Cases and Test Suites
-
-## Purpose and Scope
-
-This guide helps you organize your tests effectively using GoogleTest by describing how to create test cases, group tests meaningfully into test suites, and leverage test suite features to support maintainable and scalable testing projects. It emphasizes best practices in structuring test organization, naming conventions, and real-world examples to facilitate clear, concise, and robust test code.
-
----
+# Structuring Effective Test Suites
 
 ## Workflow Overview
 
-### What This Guide Helps You Achieve
-
-GoogleTest encourages grouping logically related tests to improve readability, maintainability, and scalability. This guide shows you how to:
-
-- Create individual test cases with well-defined scopes
-- Group tests into test suites reflecting code structure
-- Apply naming conventions for clarity
-- Use test fixture classes to share setup and teardown code
+### Task Description
+This guide explains how to organize your test code effectively using GoogleTest and GoogleMock. It focuses on grouping related tests, setting up shared fixtures to avoid duplication, parameterizing tests to cover multiple cases efficiently, and balancing test thoroughness with maintainability in larger codebases.
 
 ### Prerequisites
-
-- Basic familiarity with C++ and writing simple GoogleTest tests
-- GoogleTest and GoogleMock installed and configured
-- A test environment where you can write and run test programs
+- Basic working knowledge of GoogleTest and GoogleMock, including writing simple tests and mock classes.
+- Your project should have GoogleTest and GoogleMock properly installed and integrated.
+- Familiarity with C++ unit testing basics.
 
 ### Expected Outcome
-
-By following this guide, you will be able to:
-
-- Define test suites that group related tests sensibly
-- Structure test cases to be focused and isolated
-- Share common setup/teardown logic efficiently
-- Achieve clear, maintainable, and well-organized test codebases
+After following this guide, you will be able to:
+- Group related tests into logical test suites.
+- Use shared test fixtures to initialize common test resources.
+- Apply parameterized tests to run the same test logic on multiple data sets.
+- Design your test suite for clarity, maintainability, and comprehensive coverage.
 
 ### Time Estimate
-
-About 20 to 40 minutes, depending on your current familiarity with GoogleTest basics.
+30-45 minutes for initial implementation; ongoing maintenance time will be reduced.
 
 ### Difficulty Level
-
-Beginner to Intermediate
+Intermediate — requires understanding of test fixtures and mock usage.
 
 ---
 
-## Step-by-Step Instructions
+## Organizing Tests and Fixtures
 
-### 1. Understand Terminology
+GoogleTest encourages structuring tests into **test cases** (also called test suites), grouping logically related tests.
 
-- **Test**: An individual unit of testing—usually a function verifying a specific behavior.
-- **Test Suite**: A collection of related tests sharing common characteristics or fixtures.
-- **Test Fixture**: A class that provides a shared environment (setup/teardown) for multiple tests.
-
-### 2. Create Simple Tests Using TEST Macro
-
-Start by writing individual tests in logically named test suites. Each test is declared using `TEST(TestSuiteName, TestName)`:
+### Using Test Fixtures
+When several tests share common setup or teardown, define a test fixture by deriving from `::testing::Test`:
 
 ```cpp
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(3), 6);
-}
-```
-
-- The first parameter groups tests in a suite.
-- The second parameter identifies the test.
-
-### 3. Group Tests Using Test Suites for Logical Cohesion
-
-Group tests that check related functionality together into suites (by defining the same first argument to `TEST`). This promotes clarity and organized result reporting.
-
-### 4. Use TEST_F for Tests Requiring Shared Setup or State
-
-When tests require common setup or state, define a fixture class deriving from `testing::Test`:
-
-```cpp
-class QueueTest : public testing::Test {
-protected:
+class MyTestFixture : public ::testing::Test {
+ protected:
   void SetUp() override {
-    q1.Enqueue(1);
-    q2.Enqueue(2);
-    q2.Enqueue(3);
+    // Initialize variables or resources here
   }
 
-  Queue<int> q0;
-  Queue<int> q1;
-  Queue<int> q2;
-};
-
-TEST_F(QueueTest, IsEmptyInitially) {
-  EXPECT_EQ(q0.size(), 0);
-}
-
-TEST_F(QueueTest, DequeueWorks) {
-  int* n = q1.Dequeue();
-  ASSERT_NE(n, nullptr);
-  EXPECT_EQ(*n, 1);
-  delete n;
-}
-```
-
-- Use `TEST_F(TestFixtureName, TestName)` syntax.
-- Each test runs in a fresh fixture instance.
-
-### 5. Name Tests and Test Suites Clearly
-
-Follow conventions similar to your production code. Avoid underscores. Use descriptive names to clarify intent.
-
-### 6. Maintain One Concern per Test
-
-Ensure each test validates a single behavior or property for easier debugging and maintenance.
-
-### 7. Organize Tests in Source Files by Feature or Module
-
-Split suites logically across test files to reflect your project’s structure.
-
-### 8. Enable Test Discovery and Execution
-
-Tests registered with `TEST()` and `TEST_F()` are automatically discovered by GoogleTest runners without manual listing.
-
-### 9. Run Tests and Interpret Results
-
-- Tests within a suite are executed independently.
-- GoogleTest reports failures with file and line references.
-- Organizing tests into suites helps isolate failures and understand context.
-
----
-
-## Best Practices and Tips
-
-- **Avoid Overly Large Test Suites:** Keep test suites focused on related functionality.
-- **Use Fixtures to Share Setup:** Fixtures save duplication and centralize resource management.
-- **Keep Tests Independent:** Do not rely on tests being run in order.
-- **Use Assertions Appropriately:** Use `EXPECT_` when test can continue after failure; use `ASSERT_` when failure requires abort.
-- **Isolate Tests for Reproducibility:** Each test should initialize all data it relies on.
-- **Name Tests to Document Intent:** Clear names function as living documentation.
-- **Use Scoped Setup for Fixture Resources:** Clean up resources in `TearDown()`.
-
----
-
-## Common Pitfalls and Troubleshooting
-
-### Test Cases Not Detected
-
-- Ensure tests use `TEST()` or `TEST_F()` macros.
-- Call `testing::InitGoogleTest(&argc, argv)` before running.
-
-### Tests Fail Unexpectedly
-
-- Verify that fixtures set up all needed state.
-- Avoid side effects between tests.
-
-### Confusing Test Failures Due to Overlapping Suites
-
-- Use distinct suite names.
-- Keep tests focused and don't shadow names.
-
-### Fixtures Not Used Properly
-
-- Confirm `SetUp()` and `TearDown()` spelled correctly (capital U). Use `override`.
-
----
-
-## Examples
-
-### Simple Test Suite
-
-```cpp
-TEST(MathTest, Addition) {
-  EXPECT_EQ(2 + 2, 4);
-}
-
-TEST(MathTest, Multiplication) {
-  EXPECT_EQ(3 * 3, 9);
-}
-```
-
-### Using a Test Fixture
-
-```cpp
-class StackTest : public testing::Test {
-protected:
-  void SetUp() override {
-    stack_.Push(1);
-    stack_.Push(2);
+  void TearDown() override {
+    // Cleanup code here
   }
-  Stack<int> stack_;
+
+  // Shared objects
+  Foo* foo_ptr;
 };
+```
 
-TEST_F(StackTest, PopsElement) {
-  EXPECT_EQ(stack_.Pop(), 2);
-  EXPECT_EQ(stack_.size(), 1);
-}
+Use this fixture in tests with `TEST_F` macro:
 
-TEST_F(StackTest, IsEmptyAfterPoppingAll) {
-  stack_.Pop();
-  stack_.Pop();
-  EXPECT_TRUE(stack_.empty());
+```cpp
+TEST_F(MyTestFixture, TestCase1) {
+  // foo_ptr is ready here
+  ASSERT_NE(foo_ptr, nullptr);
+  // Test logic...
 }
 ```
+
+### Benefits
+- Avoids code duplication in setup and teardown.
+- Provides a clear contract about what state tests share.
+
+<Tip>
+Always keep the test fixture focused on shared essentials only. Don't overload fixtures with unrelated setups to preserve test clarity and fast execution.
+</Tip>
+
+## Grouping Related Tests
+
+- Organize tests by feature or class under test.
+- Name test suites descriptively to reflect underlying functionality.
+- Keep tests focused on one behavior or assertion per case.
+
+Example:
+```cpp
+TEST(CalculatorTests, AddsPositiveNumbers) { ... }
+TEST(CalculatorTests, AddsNegativeNumbers) { ... }
+```
+
+## Parameterizing Tests
+
+When the same test logic needs to run against multiple inputs or configurations, consider parameterized tests.
+
+### How to Use Parameterized Tests
+1. Derive from `::testing::TestWithParam<T>` where `T` is the parameter type.
+2. Write tests using `TEST_P` instead of `TEST` or `TEST_F`.
+3. Register test cases with parameter values using `INSTANTIATE_TEST_SUITE_P`.
+
+Example:
+
+```cpp
+class FactorialTest : public ::testing::TestWithParam<int> {};
+
+TEST_P(FactorialTest, ReturnsCorrectFactorial) {
+   int n = GetParam();
+   EXPECT_EQ(Factorial(n), ExpectedFactorialOf(n));
+}
+
+INSTANTIATE_TEST_SUITE_P(
+  FactorialTests,
+  FactorialTest,
+  ::testing::Values(0, 1, 2, 3, 4, 5)
+);
+```
+
+### Benefits
+- Reduce redundant code across similar tests.
+- Makes it easy to expand test coverage by adding new parameter values.
+
+<Note>
+Ensure parameter values represent meaningful and edge cases to maximize test effectiveness.
+</Note>
+
+## Balancing Thoroughness and Maintainability
+
+### Best Practices
+- **Avoid overly broad tests:** One test should verify one logical behavior.
+- **Use mocks prudently:** Mocks help isolate the unit under test but can increase test complexity.
+- **Keep tests fast:** Expensive tests should be limited or run selectively.
+- **Organize helper functions:** Shared utilities should be in separate files or namespaces.
+- **Document test intent:** Use clear test and suite names.
+
+### Common Pitfalls
+- Too many tests with overlapping responsibilities cause maintenance headaches.
+- Complex test fixtures that bundle unrelated resources lead to fragile tests.
+- Ignoring ordering dependencies can cause flaky tests.
+
+<Tip>
+Regularly revisit and refactor your test suite structure as the system evolves.
+</Tip>
+
+## Putting It All Together: Sample Workflow
+
+<Steps>
+<Step title="Define a Test Fixture for Shared Setup">
+Start by creating a test fixture class with common test setup/teardown.
+</Step>
+<Step title="Group Related Tests Inside the Fixture">
+Use `TEST_F` to create tests that share fixture context, each targeting one behavior.
+</Step>
+<Step title="Use Parameterized Tests for Variation">
+If your tests have similar logic but varied data, use parameterized tests derived from `TestWithParam`.
+</Step>
+<Step title="Use Mocks for Dependencies">
+Isolate the code under test by mocking collaborators using `MOCK_METHOD` and `EXPECT_CALL`.
+</Step>
+<Step title="Maintain Clear, Focused Test Cases">
+Review and design test cases to be clear and focused, avoiding duplication and fragility.
+</Step>
+</Steps>
+
+---
+
+## Troubleshooting & Tips
+
+### Common Issues
+- **Tests run but do not verify correctly:** Make sure expectations in mocks are set **before** exercise code runs.
+- **Overlapping parameterized test names:** Each instantiated test name must be unique.
+- **Slow test suites:** Use fixtures wisely and mock expensive resources.
+- **Flaky tests due to ordering:** Use sequences (`InSequence`) or `Expectation` objects to enforce order.
+
+### Best Practices
+- Use `NiceMock<>` to suppress warnings for uninteresting calls where appropriate.
+- Use `StrictMock<>` to fail tests on unexpected calls for tighter verification.
+- Always add explicit `EXPECT_CALL` for interactions you want to verify; avoid too general catch-all unless intentional.
+
+### Performance Considerations
+- Minimize test setup/teardown complexity.
+- Avoid heavy state sharing between tests.
+- Keep mock objects lightweight.
+
+### Alternative Approaches
+- Split large fixtures into multiple smaller ones if their setups don't overlap.
+- For complex parameterized testing, consider `INSTANTIATE_TEST_SUITE_P` with `ValuesIn` to supply dynamic data.
 
 ---
 
 ## Next Steps & Related Content
 
-- Explore **Using Assertions Effectively** for robust checks.
-- Learn about **Parameterized Tests** to avoid duplication.
-- Dive into **Introduction to Mocking with GoogleMock** for interaction testing.
-- Review **Writing Your First Test Case** under Getting Started for foundational knowledge.
+- Explore **[Mocking Basics](guides/core-workflows/mocking-basics.md)** to deepen your understanding of mocks and expectations.
+- Learn about **[Setting Expectations and Behaviors](guides/core-workflows/expectations-behaviors.md)** to fine-tune mock interactions.
+- Advance your testing skills with **[Parameterized Tests](guides/advanced-patterns/parameterized-tests.md)**.
+- Consult the **[GoogleTest User’s Guide - Mocking Reference](reference/mocking.md)** for detailed API documentation.
 
 ---
 
-## Additional Resources
+## Summary
+Effective test suite structuring is vital for maintainable, high-quality C++ test code. By logically grouping tests, leveraging shared fixtures, parameterizing tests, and balancing coverage with maintainability, you create robust, clear, and efficient test code. This guide equips you with practical patterns and advice to master test organization using GoogleTest and GoogleMock.
 
-- [GoogleTest Primer](primer.md) for an in-depth introduction to writing tests.
-- [gMock for Dummies](gmock_for_dummies.md) to supplement with mocking techniques.
-- [Mocking Cookbook](gmock_cook_book.md) for advanced mocking use cases.
-- [GoogleTest Primer: Test Case vs Test Suite Terminology](primer.md#beware-of-the-nomenclature)
 
 ---
-
-This guide focuses exclusively on structuring test cases and suites within GoogleTest, ensuring your tests remain systematic, readable, and maintainable as your project grows.
-
-
