--- a/guides/advanced-patterns/parameterized-tests.mdx
+++ b/guides/advanced-patterns/parameterized-tests.mdx
@@ -1,268 +1,296 @@
 ---
-title: "Parameterized and Typed Tests"
-description: "Instruction on using parameterized and typed tests to maximize reuse and coverage, including practical project examples and advice for balancing test flexibility and clarity."
+title: "Parameterizing Your Tests"
+description: "Dive into value- and type-parameterized tests to maximize coverage and minimize boilerplate—for scenarios where your logic must be tested across different inputs or types."
 ---
 
-# Parameterized and Typed Tests
+# Parameterizing Your Tests
 
-GoogleTest provides powerful features to maximize test reuse and coverage through _parameterized_ and _typed_ tests. These features allow writing test patterns that run with multiple inputs or types, reducing code duplication and improving test clarity. This guide helps you leverage these features effectively, illustrates usage with practical examples, and offers advice on balancing flexibility with readability.
-
----
-
-## Workflow Overview
-
-- **Task Description**: Learn to write parameterized (value-driven) and typed (type-driven) tests with GoogleTest to test multiple inputs or types using a single test definition.
-- **Prerequisites**: Basic familiarity with GoogleTest macros like `TEST`, `TEST_F`, and understanding of C++ templates.
-- **Expected Outcome**: You will be able to create reusable test fixtures that accept parameters or types, instantiate them with various values or types, and run comprehensive test suites with minimal redundancy.
-- **Time Estimate**: 20-30 minutes to grasp concepts and apply basic examples.
-- **Difficulty Level**: Intermediate
+Dive into value- and type-parameterized tests to maximize coverage and minimize boilerplate—for scenarios where your logic must be tested across different inputs or types.
 
 ---
 
-## Parameterized Tests
+## Overview
 
-Value-parameterized tests allow running the same test logic with different input values, eliminating repetitive boilerplate code.
+Parameterizing your tests in GoogleTest allows you to write a single generic test and run it multiple times with different input values or types. This approach reduces code duplication while ensuring robust test coverage across a wide range of scenarios.
 
-### 1. Defining a Parameterized Test Fixture
+This guide focuses specifically on how to create and manage value-parameterized and type-parameterized tests, empowering your test suite to efficiently handle diverse inputs and type variations.
 
-Create a test fixture class derived from `testing::TestWithParam<T>`, where `T` is the parameter type:
+---
+
+## Prerequisites
+
+- Familiarity with GoogleTest basics such as writing simple tests with `TEST()` and fixtures with `TEST_F()`.
+- GoogleTest properly installed and configured within your project.
+- Basic knowledge of C++ templates and types is helpful for understanding type-parameterized tests.
+
+---
+
+## What You Will Achieve
+
+- Define and run value-parameterized tests that execute the same logic with different literal/test values.
+- Create type-parameterized tests to validate the same test suite logic works across multiple C++ types.
+- Instantiate tests with custom parameter sets using built-in generators like `Values()`, `Range()`, `Combine()`, and more.
+- Customize test names dynamically for readable and debuggable test reports.
+
+---
+
+## Time Estimate
+
+About 20-30 minutes to learn and implement basic parameterized tests, depending on C++ familiarity.
+
+---
+
+# Value-Parameterized Tests
+
+When you want to run the same test logic against different literal values (e.g., integers, strings, enums), value-parameterized tests save you from creating multiple test functions.
+
+## Steps to Create a Value-Parameterized Test
+
+<Steps>
+<Step title="Define a Test Fixture Inheriting from `TestWithParam<T>`">
+Derive a test fixture class from `::testing::TestWithParam<T>`, where `T` is the parameter type you want.
 
 ```cpp
-class FooTest : public testing::TestWithParam<int> {
-  // Fixture members and setup as usual
-};
+class FooTest : public ::testing::TestWithParam<int> {};
 ```
 
-### 2. Writing Parameterized Tests Using `TEST_P`
-
-Use `TEST_P` macro to define tests that use the parameter:
+This fixture will provide access to the parameter via `GetParam()`.
+</Step>
+<Step title="Write Your Tests Using `TEST_P` Macro">
+Define parameterized tests using `TEST_P` instead of `TEST_F`. Inside the test, access the current parameter using `GetParam()`.
 
 ```cpp
-TEST_P(FooTest, HandlesVariousInputs) {
-  int param = GetParam();             // Access test parameter
-  EXPECT_TRUE(YourFunction(param));
+TEST_P(FooTest, DoesBlah) {
+    int param = GetParam();
+    EXPECT_TRUE(SomeFunction(param));
 }
 ```
+</Step>
+<Step title="Instantiate the Test Suite with Parameters">
+Use `INSTANTIATE_TEST_SUITE_P` to create test instances with different parameters.
 
-### 3. Instantiating Parameterized Tests
-
-Use `INSTANTIATE_TEST_SUITE_P` to provide test values:
+Example with explicit values:
 
 ```cpp
-INSTANTIATE_TEST_SUITE_P(
-    MyInstantiation, FooTest,
-    testing::Values(1, 2, 3, 4));
+INSTANTIATE_TEST_SUITE_P(MyParams, FooTest, ::testing::Values(1, 2, 3));
 ```
 
-Each value in `Values` results in a separate test instance. Test names will include indices for distinction:
+Example with a container:
 
-- `MyInstantiation/FooTest.HandlesVariousInputs/0` runs with parameter = 1
-- `MyInstantiation/FooTest.HandlesVariousInputs/1` runs with parameter = 2
+```cpp
+int arr[] = {4, 5, 6};
+INSTANTIATE_TEST_SUITE_P(ContainerParams, FooTest, ::testing::ValuesIn(arr));
+```
 
-### 4. Available Parameter Generators
+You can combine generators using `Combine()`, generate ranges with `Range()`, or simply test Boolean cases with `Bool()`.
+</Step>
+<Step title="Run Your Tests Normally">
+Invoke tests as usual with `RUN_ALL_TESTS()`. GoogleTest will run the test suite for each parameter value.
 
-GoogleTest provides versatile built-in parameter generators:
+Test names will include the parameter index by default, e.g., `MyParams/FooTest.DoesBlah/0`.
+</Step>
+</Steps>
 
-| Generator       | Description                                                        |
-|-----------------|--------------------------------------------------------------------|
-| `Range(begin, end[, step])` | Sequence of values starting at `begin` incremented by `step` (default 1), excluding `end`. |
-| `Values(v1, v2, ...)`       | Explicit list of values.                                          |
-| `ValuesIn(container)` or `ValuesIn(begin, end)` | Values from containers or iterator ranges.                     |
-| `Bool()`                   | Generates `false` and `true`.                                    |
-| `Combine(g1, g2, ..., gN)` | Cartesian product of multiple generators producing tuples.      |
 
-### 5. Using `GetParam()`
+### Built-in Parameter Generators
 
-Inside `TEST_P`, call `GetParam()` to retrieve the current test parameter, which can be any copyable C++ type.
+| Generator      | Description                                                                                 |
+| -------------- | ------------------------------------------------------------------------------------------- |
+| `Values(...)`  | Tests with the listed explicit values, e.g., `Values(1, 2, 3)`                             |
+| `ValuesIn(...)`| Tests using values from arrays, containers, or iterator ranges                             |
+| `Range(start, end[, step])` | Tests a sequence starting at `start` to but excluding `end`, stepping by `step`         |
+| `Bool()`       | Tests with boolean `false` and `true`                                                      |
+| `Combine(g1, g2, ...)` | Combines multiple generators creating a Cartesian product of parameters                  |
 
-### 6. Customizing Parameter Test Names
 
-To generate readable test names based on parameters, specify a **name generator** function or functor:
+### Example: Value-Parameterized Test
+
+```cpp
+class IsEvenTest : public ::testing::TestWithParam<int> {};
+
+TEST_P(IsEvenTest, CheckEven) {
+  int value = GetParam();
+  EXPECT_EQ(value % 2, 0);
+}
+
+INSTANTIATE_TEST_SUITE_P(EvenNumbers, IsEvenTest, ::testing::Values(2, 4, 6, 8));
+```
+
+This runs `CheckEven` four times—once with each value.
+
+---
+
+# Customizing Parameter Test Names
+
+The default parameter names are numeric indices which may not be descriptive. You can provide a custom naming function:
 
 ```cpp
 INSTANTIATE_TEST_SUITE_P(
-    NamesExample,
-    FooTest,
-    testing::Values(1, 2, 3),
-    [](const testing::TestParamInfo<FooTest::ParamType>& info) {
-      return "Param_" + std::to_string(info.param);
+    Named, FooTest, ::testing::Values(1,2,3),
+    [](const testing::TestParamInfo<int>& info) {
+        return "Value_" + std::to_string(info.param);
     });
 ```
 
-Name suffixes must be unique and contain only alphanumeric characters or underscores.
-
-### 7. Suppressing Instantiation Errors
-
-If you declare a parameterized test suite but do not instantiate it, GoogleTest by default considers this an error. To allow a test suite without instantiation (e.g., in a library header), tag it:
-
-```cpp
-GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST(FooTest);
-```
-
-### Practical Example
-
-```cpp
-class MyTest : public testing::TestWithParam<std::string> {
-};
-
-TEST_P(MyTest, HasLength) {
-  EXPECT_GT(GetParam().length(), 0);
-}
-
-INSTANTIATE_TEST_SUITE_P(StringValues,
-                         MyTest,
-                         testing::Values("foo", "bar", "baz"));
-```
-
-This runs the `HasLength` test with three different string parameters.
+This produces test cases appended with suffixes like `Value_1`, `Value_2`, etc.
 
 ---
 
-## Typed Tests
+# Type-Parameterized Tests
 
-Typed tests repeat the same test logic across a fixed list of C++ types, useful for testing templates or type-specific behavior.
+Use these when the same test logic should be verified over multiple C++ types, such as `int`, `float`, `std::string`, or custom classes.
 
-### 1. Defining a Typed Test Fixture Template
+## Steps to Create a Type-Parameterized Test
 
-Create a fixture template class parameterized by a type `T`:
+<Steps>
+<Step title="Define a Fixture Template Class">
+Template your fixture class on a type parameter and derive from `::testing::Test`.
 
 ```cpp
 template <typename T>
-class FooTest : public testing::Test {
+class MyTypedTest : public ::testing::Test {
  public:
-  T value_;
-  // Common setup for T
+   T value_;
 };
 ```
-
-### 2. Associating Type List with a Test Suite Using `TYPED_TEST_SUITE`
-
-Define a `Types` list and register it:
+</Step>
+<Step title="Declare the List of Types to Test">
+List the types you want your tests to be instantiated with using `testing::Types<...>`.
 
 ```cpp
-using MyTypes = ::testing::Types<int, double, char>;
-TYPED_TEST_SUITE(FooTest, MyTypes);
+using MyTypes = ::testing::Types<int, float, double>;
 ```
-
-### 3. Writing Typed Tests Using `TYPED_TEST`
-
-Define tests using `TYPED_TEST`. Access the current type using `TypeParam`:
+</Step>
+<Step title="Associate the Types with the Fixture Using `TYPED_TEST_SUITE`">
+Bind the type list to your test suite.
 
 ```cpp
-TYPED_TEST(FooTest, DoesStuff) {
-  TypeParam value = this->value_;
-  // Test logic using TypeParam
+TYPED_TEST_SUITE(MyTypedTest, MyTypes);
+```
+</Step>
+<Step title="Write Typed Tests Using `TYPED_TEST`">
+Define tests with `TYPED_TEST`. Use the special `TypeParam` alias to access the current type.
+
+```cpp
+TYPED_TEST(MyTypedTest, DoesBlah) {
+  TypeParam n = this->value_;
+  EXPECT_TRUE(SomeFunction(n));
 }
 ```
+</Step>
+<Step title="Run Your Tests Normally">
+The GoogleTest framework will instantiate and run tests for each specified type.
+</Step>
+</Steps>
 
-You can write multiple `TYPED_TEST` tests per suite.
+---
 
-### 4. Example
+# Type-Parameterized Test Patterns
+
+These tests allow you to define abstract test patterns without knowing the types in advance, then instantiate with multiple type lists in different translation units.
+
+Required steps:
+
+- Use the `_P` macro variants: `TYPED_TEST_SUITE_P`, `TYPED_TEST_P`, `REGISTER_TYPED_TEST_SUITE_P`.
+- Instantiate with `INSTANTIATE_TYPED_TEST_SUITE_P` using your list of types.
+
+This approach is especially valuable when implementing interfaces or concepts to verify compliance with behavior irrespective of type.
+
+---
+
+# Practical Tips & Best Practices
+
+- Every test run uses a fresh fixture instance — avoid sharing state across tests.
+- Use descriptive parameter names for clarity in test output.
+- Combine parameter generators to stress-test combinations of inputs (e.g., multiple flags).
+- Prefer `TEST_P` for reusable parameterized fixtures rather than duplicating similar `TEST_F` tests.
+- When the parameter type is not implicitly convertible from the generator, use `ConvertGenerator` to convert values safely.
+- Remember parameter generators are evaluated during `InitGoogleTest()`, not at instantiation or test runtime.
+
+---
+
+# Common Pitfalls & Troubleshooting
+
+<AccordionGroup title="Troubleshooting Parameterized Tests">
+<Accordion title="Test Cases Are Not Instantiated or Run">
+Make sure you call `INSTANTIATE_TEST_SUITE_P` for every parameterized test suite.
+Without instantiation, tests will be registered as uninstantiated and skipped.
+If you want to allow uninstantiated tests, use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST`.
+</Accordion>
+<Accordion title="Test Names are Confusing or Duplicated">
+Customize the naming function in `INSTANTIATE_TEST_SUITE_P` to give meaningful test suffixes.
+Avoid parameters with characters invalid for test names.
+</Accordion>
+<Accordion title="Parameters Not Correctly Passed to Test">
+Verify your fixture derives from `TestWithParam<T>` where `T` exactly matches your parameter type.
+Access parameters only via `GetParam()`.
+</Accordion>
+<Accordion title="Compiler Errors with Type-Parameterized Tests">
+Confirm your fixture class is a template with one type parameter.
+Use `TYPED_TEST_SUITE` macro correctly including its type list alias.
+Make sure your test code uses `TYPED_TEST` macros with correct test suite and test names.
+</Accordion>
+</AccordionGroup>
+
+---
+
+# Example Code Snippets
+
+### Value-Parameterized Test Example
+
+```cpp
+class IsPrimeTest : public ::testing::TestWithParam<int> {};
+
+TEST_P(IsPrimeTest, CheckPrime) {
+  int n = GetParam();
+  EXPECT_TRUE(IsPrime(n));
+}
+
+INSTANTIATE_TEST_SUITE_P(PrimeNumbers, IsPrimeTest, ::testing::Values(2, 3, 5, 7, 11));
+```
+
+### Type-Parameterized Test Example
 
 ```cpp
 template <typename T>
-class ContainerTest : public testing::Test {
- public:
-  T container_;
+class NumericLimitsTest : public ::testing::Test {
+ protected:
+  T min_ = std::numeric_limits<T>::min();
 };
 
-using ContainerTypes = ::testing::Types<std::vector<int>, std::list<int>>;
-TYPED_TEST_SUITE(ContainerTest, ContainerTypes);
+using NumericTypes = ::testing::Types<int, float, double>;
+TYPED_TEST_SUITE(NumericLimitsTest, NumericTypes);
 
-TYPED_TEST(ContainerTest, IsEmptyInitially) {
-  EXPECT_TRUE(this->container_.empty());
+TYPED_TEST(NumericLimitsTest, MinIsNotZero) {
+  EXPECT_NE(this->min_, 0);
 }
 ```
 
-This runs the same empty test logic for both `std::vector<int>` and `std::list<int>`.
+---
+
+# Next Steps & Related Topics
+
+- Explore [Writing and Running Your First Test](/guides/getting-started/writing-your-first-test) to solidify foundational skills.
+- Dive into [Using Assertions Effectively](/guides/core-workflows/using-assertions) for assertion mastery within parameterized tests.
+- Learn about [Structured Test Suites](/guides/core-workflows/structuring-tests) to better organize your parameterized tests.
+- Study [Mocking Functions and Objects](/guides/core-workflows/mocking-basics) to combine mocking with parameterized testing.
+
+For more code examples, visit the [googletest samples directory](https://github.com/google/googletest/tree/main/googletest/samples).
 
 ---
 
-## Type-Parameterized Tests
+# References
 
-Type-parameterized tests are similar to typed tests but enable defining test patterns that can be instantiated with different sets of types later, possibly multiple times. This is ideal for abstract interface testing.
-
-### 1. Declaring a Type-Parameterized Test Suite with `TYPED_TEST_SUITE_P`
-
-Declare a template fixture:
-
-```cpp
-template <typename T>
-class InterfaceTest : public testing::Test {
-  void DoTest();
-};
-
-TYPED_TEST_SUITE_P(InterfaceTest);
-```
-
-### 2. Defining Test Patterns with `TYPED_TEST_P`
-
-Define tests that refer to `TypeParam`:
-
-```cpp
-TYPED_TEST_P(InterfaceTest, SupportsOperation) {
-  TypeParam obj;
-  EXPECT_TRUE(obj.Operation());
-}
-```
-
-You can define multiple tests.
-
-### 3. Registering Tests using `REGISTER_TYPED_TEST_SUITE_P`
-
-Register all tests within the suite:
-
-```cpp
-REGISTER_TYPED_TEST_SUITE_P(InterfaceTest, SupportsOperation, OtherTest);
-```
-
-### 4. Instantiating with Type Lists
-
-Instantiate the registered suite for specific types with `INSTANTIATE_TYPED_TEST_SUITE_P`:
-
-```cpp
-using ImplTypes = ::testing::Types<ImplA, ImplB>;
-INSTANTIATE_TYPED_TEST_SUITE_P(Implementations, InterfaceTest, ImplTypes);
-```
-
-### Practical Use
-
-This pattern lets you write tests once in a header and have multiple implementations instantiate them to verify compliance, enabling scalable interface testing.
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
+- [Advanced: Value-Parameterized Tests](https://github.com/google/googletest/blob/main/docs/advanced.md#value-parameterized-tests)
+- [Advanced: Typed Tests](https://github.com/google/googletest/blob/main/docs/advanced.md#typed-tests)
+- [GoogleTest API Reference - TEST_P, INSTANTIATE_TEST_SUITE_P](https://github.com/google/googletest/blob/main/docs/reference/testing.md#TEST_P)
+- [GoogleTest API Reference - TYPED_TEST_SUITE](https://github.com/google/googletest/blob/main/docs/reference/testing.md#TYPED_TEST_SUITE)
 
 ---
 
-## Best Practices & Tips
+# Summary
 
-- **Name Tests Clearly**: Avoid underscores in test and suite names for compatibility.
-- **Balance Test Coverage and Readability**: Use parameterized tests to cover cases but break tests apart when scenarios differ significantly.
-- **Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST` for Abstract Tests**: Prevent unwanted test failures from uninstantiated test suites.
-- **Custom Test Names Aid Debugging**: Leverage name generators to produce descriptive test names conveying parameter content.
-- **Verify Test Parameter Types Match**: Ensure that parameter types in fixtures match the parameter generator values.
-
----
-
-## Troubleshooting
-
-- **Tests Not Running?**
-  - Confirm you have instantiated all parameterized test suites.
-  - Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST()` if intentional.
-- **Name Generator Errors**
-  - Ensure your test name generator functions produce unique, valid names.
-- **Parameter Type Mismatches**
-  - Verify that the parameter type declared in the fixture matches those provided by the generators.
-- **Compilation Errors with Typed Tests**
-  - Ensure the fixture template is correctly defined and inherits from `testing::Test`.
-
----
-
-## Next Steps & Related Content
-
-- Explore the [Writing and Running Unit Tests](../core-workflows/writing-tests.md) guide for foundational test writing.
-- Learn about [Using Mocks for Dependency Isolation](../core-workflows/using-mocks.md) to enhance parameterized testing.
-- Delve into [Assertions and Matchers](../core-workflows/assertions-matchers.md) to improve verification expressiveness.
-
----
-
-For detailed API references, consult the [Testing Reference](../reference/testing.md) and related advanced topics in the [Advanced GoogleTest Topics](../advanced.md). Access the full repository and samples at the official [GoogleTest GitHub project](https://github.com/google/googletest).
+This page guides you through creating parameterized tests that maximize coverage while minimizing repetitive code in GoogleTest. It covers how to write value-parameterized tests with `TEST_P` and `INSTANTIATE_TEST_SUITE_P`, how to employ type-parameterized tests using templates and `TYPED_TEST_SUITE`, and advanced patterns like type-parameterized test registration and instantiation. Practical code examples, troubleshooting tips, and best practices ensure your journey into parameterized tests is smooth and effective.
 
 ---
